bug: seekbar invisible in chromium cause: ::moz-range-thumb equivalent not available in chromium fix: used a div to achieve simmilar effect

--- a/components/player/index.sass
+++ b/components/player/index.sass
@@ -134,6 +134,7 @@ body
     border-radius: 5px
     outline: none
     position: relative
+    z-index: 9999999
 
     &::-webkit-slider-runnable-track
         width: 100%
@@ -165,22 +166,16 @@ body
         border: none
         background-color: transparent
 
-    &::-webkit-slider-thumb::before
-        content: ''
-        width: 100%
-        height: 100%
-        background-color: $mu_seek-fg
-        position: absolute
-        top: 0
-        left: 0
-        border-radius: 5px
-        transition: width 0.3s ease
-
-    &::-moz-range-progress
-        width: 100%
-        height: 100%
-        background-color: $mu_seek-fg
-        border-radius: 5px
+#mu-seeked
+    content: ""
+    position: absolute
+    width: 0%
+    height: 10px
+    background-color: $mu_seek-fg
+    border-radius: 5px
+    top: 0
+    left: 0
+    z-index: 99999991
 
 .mu-stick-bottom
     position: fixed
